objects/Hippa__c.object
<CustomObject>
    <fields>
        <fullName>Hackers__c</fullName>
        <label>Hackers</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phishing__c</fullName>
        <label>Phishing</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ransomware__c</fullName>
        <label>Ransomware</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>hippa</label>
    <nameField>
        <label>hippa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>hippas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>